# AegisAI

./: .env.example  .gitignore  AEGIS_AI_PROJECT_PROPOSAL.md  README.md  RENDER_FIX_CHECKLIST.md  RESPONSIVE_SIDEBAR_GUIDE.md  SETUP.md  check-services.js  missingadmin.md  pyproject.toml  pytest.ini  requirements.txt
.kiro/specs/ml-credit-risk-model/: design.md  requirements.md  tasks.md
Backend/: .env.example  README.md  package.json  render.yaml  seed-loans.js  server.js  test-email.js
Backend/db/: connection.js
Backend/middleware/: errorHandler.js
Backend/routes/: alerts.js  history.js  incidents.js  loans.js  predict.js  stats.js
Backend/services/: alertIntegration.js  alertService.js
Frontend/: .env  build_log.txt  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
Frontend/src/: App.tsx  index.css
Frontend/src/context/: AuthContext.tsx
Frontend/src/layouts/: DashboardLayout.tsx  UserDashboardLayout.tsx
Frontend/src/pages/: Dashboard.tsx  (+8 more)
model/: .dockerignore  .env.example  Dockerfile  README.md  __init__.py  config.py  data_store.py  main.py  ml_model.py  render.yaml  requirements.txt  schemas.py  seed_predictions.py  seed_user_loans.py  train.py  training.py
model/config/: governance_rules.yaml
model/explainability/: __init__.py  shap_explainer.py
model/governance/: __init__.py  trust_engine.py
model/llm/: __init__.py  openrouter_service.py
model/monitoring/: __init__.py  drift_detector.py  performance_tracker.py  system_health.py
model/trained_models/: credit_risk_model_v20260217_145858.joblib
(+24 files in other folders)
